--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongoose": "^7.2.2",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1"
   }
