--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.0",
-    "bootstrap-vue": "^2.23.1"
+    "bootstrap-vue": "^2.23.1",
     "express": "^4.18.2"
   }
 }
